# opencv-starter

./: .gitignore  CMakeLists.txt  README.md
mat/: CMakeLists.txt
mat/src/: basic_image_container.cpp  create_mat_explicitly.cpp  output_formatting.cpp  start_with_images.cpp
scan_images/: CMakeLists.txt
scan_images/src/: base_understand.cpp
tools/: sample_env_setup.sh
